--- a/BattleTank/Config/DefaultInput.ini
+++ b/BattleTank/Config/DefaultInput.ini
@@ -42,6 +42,7 @@ DefaultViewportMouseLockMode=LockOnCapture
 +ActionMappings=(ActionName="Quit",Key=Gamepad_Special_Left,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Fire",Key=LeftMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Fire",Key=Gamepad_FaceButton_Bottom,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Swap Cam",Key=Gamepad_FaceButton_Top,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +AxisMappings=(AxisName="AimAzimuth",Key=MouseX,Scale=1.000000)
 +AxisMappings=(AxisName="AimElevation",Key=MouseY,Scale=-1.000000)
 +AxisMappings=(AxisName="AimAzimuth",Key=Gamepad_RightX,Scale=1.000000)
@@ -52,6 +53,8 @@ DefaultViewportMouseLockMode=LockOnCapture
 +AxisMappings=(AxisName="Right Track Throttle",Key=Gamepad_RightShoulder,Scale=-0.500000)
 +AxisMappings=(AxisName="Move Forward/Backward",Key=Gamepad_LeftY,Scale=1.000000)
 +AxisMappings=(AxisName="Turn Right/Left",Key=Gamepad_LeftX,Scale=1.000000)
++AxisMappings=(AxisName="Move Forward/Backward",Key=W,Scale=1.000000)
++AxisMappings=(AxisName="Turn Right/Left",Key=D,Scale=1.000000)
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
